--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8" />
 		<title>UNLa</title>
 		<!-- Bootstrap core CSS -->
-		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-		<link href="/css/modern-business.css" rel="stylesheet" />
+		<link href="/vendor/bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+		<link href="/css/modern-business.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 	    <!-- Page Content -->
