--- a/src/main/resources/templates/dispositivo/dispositivo.html
+++ b/src/main/resources/templates/dispositivo/dispositivo.html
@@ -22,17 +22,83 @@
     </table>
    
     <form action="#" th:action="@{/dispositivo/}" th:object="${dispositivo}" method="post">
-        <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
-        <p>Activo: <input type="text" th:field="*{activo}" /></p>
-        <input type="submit" />
-    </form>
-      <!--
-     <form th:object="${dispositivo}" th:action="@{/submit/}" method="post">
-		 <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
-		 <p>Activo: <input type="text" th:field="*{activo}" /></p>
-		 <p><input type="submit" value="Enviar" /></p>
-	</form>-->
-        
+		<p>Nombre: <input type="text" th:field="*{nombre}" /></p>
+        <p>Activo:
+		  <select th:field="*{activo}">
+		    <option value="true">Verdadero</option>
+		    <option value="false">Falso</option>
+		  </select>
+		</p>
+		
+         <!--<div class="dropdown">
+	  <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	    Seleccionar Tipo de Dispositivo
+	  </button>
+	  <div class="dropdown-menu" aria-labelledby="deviceTypeDropdown">
+	    <a class="dropdown-item" href="#" onclick="setDeviceType('Recolector Inteligente')">Recolector Inteligente</a>
+	    <a class="dropdown-item" href="#" onclick="setDeviceType('Sensor de Humedad')">Sensor de Humedad</a>
+	    <a class="dropdown-item" href="#" onclick="setDeviceType('Sensor de Alumbrado')">Sensor de Alumbrado</a>
+	    <a class="dropdown-item" href="#" onclick="setDeviceType('Sensor de Estacionamiento')">Sensor de Estacionamiento</a>
+	  </div>
+	</div>
+	
+		<div class="input-group">
+	  <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
+	  <div class="input-group-append">
+	    <button type="button" class="btn btn-outline-secondary">Action</button>
+	    <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	      <span class="sr-only">Toggle Dropdown</span>
+	    </button>
+	    <div class="dropdown-menu">
+	      <a class="dropdown-item" href="#">Action</a>
+	      <a class="dropdown-item" href="#">Another action</a>
+	      <a class="dropdown-item" href="#">Something else here</a>
+	      <div role="separator" class="dropdown-divider"></div>
+	      <a class="dropdown-item" href="#">Separated link</a>
+	    </div>
+	  </div>
+	</div>-->
+	
+	<form th:object="${dispositivo}" th:action="@{/submit/}" method="post">
+	  <div class="form-group">
+	    <label>Tipo de Dispositivo:</label>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="recolectorInteligente" value="recolectorInteligente">
+	      <label class="form-check-label" for="recolectorInteligente">Recolector Inteligente</label>
+	      <div class="additional-fields">
+	        <p>Ubicación: <input type="text" name="ubicacion"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorHumedad" value="sensorHumedad">
+	      <label class="form-check-label" for="sensorHumedad">Sensor de Humedad</label>
+	      <div class="additional-fields">
+	        <p>Encendido: <input type="checkbox" name="encendido"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorAlumbrado" value="sensorAlumbrado">
+	      <label class="form-check-label" for="sensorAlumbrado">Sensor de Alumbrado</label>
+	      <div class="additional-fields">
+	        <p>Estación: <input type="text" name="estacion"></p>
+	        <p>Encendido: <input type="checkbox" name="encendido"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorEstacionamiento" value="sensorEstacionamiento">
+	      <label class="form-check-label" for="sensorEstacionamiento">Sensor de Estacionamiento</label>
+	      <div class="additional-fields">
+	        <p>Plazas: <input type="number" name="plazas"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	  </div>
+	
+	  <button type="submit" class="btn btn-primary">Guardar</button>
+	</form>
     
 </body>
 </html>
