--- a/src/main/resources/templates/evento/evento.html
+++ b/src/main/resources/templates/evento/evento.html
@@ -1,1 +1,39 @@
-<h1> EVENTO </h1>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<title>Evento</title>
+</head>
+<body>
+	<h1>HOLA VIEJO123456</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Descripcion</th>
+                <th>Fecha Registro</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="evento : ${eventos}">
+                <td><span th:text="${evento.descripcion}" /></td>
+                <td><span th:text="${evento.fechaRegistro}" /></td>
+            </tr>
+        </tbody>
+    </table>
+   
+    <form action="#" th:action="@{/dispositivo/}" th:object="${dispositivo}" method="post">
+        <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
+        <p>Activo: <input type="text" th:field="*{activo}" /></p>
+        <p>Activo: <input type="text" th:field="*{activo}" /></p>
+        <input type="submit" />
+    </form>
+      <!--
+     <form th:object="${dispositivo}" th:action="@{/submit/}" method="post">
+		 <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
+		 <p>Activo: <input type="text" th:field="*{activo}" /></p>
+		 <p><input type="submit" value="Enviar" /></p>
+	</form>-->
+        
+    
+</body>
+</html>
