--- a/src/main/resources/templates/medicion/medicion.html
+++ b/src/main/resources/templates/medicion/medicion.html
@@ -1,1 +1,36 @@
-<h1> MEDICIONEDS PAPA </h1>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<title>MEDICIONEDS PAPA</title>
+</head>
+<body>
+	<h1>HOLA VIEJO123456</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Dispositivo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="medicion : ${mediciones}">
+                <td><span th:text="${medicio.}" /></td>
+                <td><span th:text="${medicio.dispositivo}" /></td>
+            </tr>
+        </tbody>
+    </table>
+    <form action="#" th:action="@{/medicion/}" th:object="${medicion}" method="post">
+        <p>Nombre: <input type="text" th:field="*{fechaRegistro}" /></p>
+        <input type="submit" />
+    </form>
+      <!--
+     <form th:object="${dispositivo}" th:action="@{/submit/}" method="post">
+		 <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
+		 <p>Activo: <input type="text" th:field="*{activo}" /></p>
+		 <p><input type="submit" value="Enviar" /></p>
+	</form>-->
+        
+    
+</body>
+</html>
