--- a/src/main/resources/templates/dispositivo/dispositivos.html
+++ b/src/main/resources/templates/dispositivo/dispositivos.html
@@ -2,44 +2,63 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-	<link href="/css/dispositivo.css" rel="stylesheet" />
-	<title>Dispositivo</title>
+<title>Dispositivo</title>
 </head>
 <body>
-	<div class="col">
-  		<h1>Listado de Sensores</h1>
-	</div>
-	<div class="container col-10" id="myTable">
-  		<div class="col-12">
-    	<h2> </h2>
-  	</div>
-
-  	<table class="table table-stripped table-bordered" >
-    	<thead class="table-dark">
-      		<tr>
-        		<th scope="col">Id</th>
-        		<th scope="col">Activo</th>
-        		<th scope="col">Name</th>
-        		<th scope="col">Info</th>
-        		<th scope="col">Update</th>
-        		<th scope="col">Delete</th>
-      		</tr>
-    	</thead>
-    	<tbody>
-     	 	<tr th:each="dispositivo: ${dispositivos}">
-        		<td th:text="${dispositivo.id}"></td>
-        		<td th:text="${dispositivo.activo}"></td>
-        		<td th:text="${dispositivo.nombre}"></td>
-        		
-        		<td><button type="button" class="btn btn-link">Info</button></td>
-        		<td><button type="button" class="btn btn-primary">Editar</button></td>
-        		<td><button type="button" class="btn btn-danger">Delete</button></td>
-      		</tr>
-    	</tbody>
-  	</table>
-	</div>
+	<h1>HOLA VIEJO123456</h1>
 	
+		
+	<form th:object="${dispositivo}" th:action="@{/new}" method="post">
+	  <div class="form-group">
+		  <div class="required-field">
+        <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
+        <p>Activo:
+          <select th:field="*{activo}">
+            <option value="true">Verdadero</option>
+            <option value="false">Falso</option>
+          </select>
+        </p>
+        </div>
+	    <label>Tipo de Dispositivo:</label>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="recolectorInteligente" value="recolectorInteligente">
+	      <label class="form-check-label" for="recolectorInteligente">Recolector Inteligente</label>
+	      <div class="additional-fields">
+	        <p>Ubicación: <input type="text" name="ubicacion"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorHumedad" value="sensorHumedad">
+	      <label class="form-check-label" for="sensorHumedad">Sensor de Humedad</label>
+	      <div class="additional-fields">
+	        <p>Encendido: <input type="checkbox" name="encendido"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorAlumbrado" value="sensorAlumbrado">
+	      <label class="form-check-label" for="sensorAlumbrado">Sensor de Alumbrado</label>
+	      <div class="additional-fields">
+	        <p>Estación: <input type="text" name="estacion"></p>
+	        <p>Encendido: <input type="checkbox" name="encendido"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorEstacionamiento" value="sensorEstacionamiento">
+	      <label class="form-check-label" for="sensorEstacionamiento">Sensor de Estacionamiento</label>
+	      <div class="additional-fields">
+	        <p>Plazas: <input type="number" name="plazas"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	  </div>
 	
+	  <button type="submit" class="btn btn-primary">Guardar</button>
+	</form>
+	</body>
+</html>
 	<!--
     <table>
         <thead>
@@ -68,6 +87,3 @@
 		 <p><input type="submit" value="Enviar" /></p>
 	</form>-->
         
-    
-</body>
-</html>
