--- a/src/main/resources/templates/dispositivo/new.html
+++ b/src/main/resources/templates/dispositivo/new.html
@@ -1,1 +1,22 @@
-<h1>Crear Dispositivo</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="/css/dispositivo.css" rel="stylesheet" />
+    <title>Dispositivo</title>
+</head>
+<body>
+    
+
+    <form action="#" th:action="@{/new}" th:object="${dispositivo}" method="post">
+        <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
+        <p>Activo: <input type="text" th:field="*{activo}" /></p>
+        <input type="submit" />
+    </form>
+      
+    
+	
+
+
+</body>
+</html>
