Integracion de los componentes del SensorHumedad en el controller Dispositivo

--- a/src/main/resources/templates/dispositivo/dispositivos.html
+++ b/src/main/resources/templates/dispositivo/dispositivos.html
@@ -24,7 +24,7 @@
 	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="recolectorInteligente" value="recolectorInteligente">
 	      <label class="form-check-label" for="recolectorInteligente">Recolector Inteligente</label>
 	      <div class="additional-fields">
-	        <p>Ubicación: <input type="text" name="ubicacion"></p>
+	        <p>Ubicación: <input type="text" th:field="*{ubicacion}" name="ubicacion"></p>
 	        <!-- Agrega más inputs según tus necesidades -->
 	      </div>
 	    </div>
