--- a/src/main/resources/templates/dispositivo/new.html
+++ b/src/main/resources/templates/dispositivo/new.html
@@ -9,12 +9,61 @@
     
 
     <form action="#" th:action="@{/new}" th:object="${dispositivo}" method="post">
+		<!--
         <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
         <p>Activo: <input type="text" th:field="*{activo}" /></p>
         <input type="submit" />
     </form>
       
-    
+    <form th:object="${dispositivo}" th:action="@{/new}" method="post">-->
+	  <div class="form-group">
+		  <div class="required-field">
+        <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
+        <p>Activo:
+          <select th:field="*{activo}">
+            <option value="true">Verdadero</option>
+            <option value="false">Falso</option>
+          </select>
+        </p>
+        </div>
+	    <label>Tipo de Dispositivo:</label>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="recolectorInteligente" value="recolectorInteligente">
+	      <label class="form-check-label" for="recolectorInteligente">Recolector Inteligente</label>
+	      <div class="additional-fields">
+	        <p>Ubicación: <input type="text" name="ubicacion"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorHumedad" value="sensorHumedad">
+	      <label class="form-check-label" for="sensorHumedad">Sensor de Humedad</label>
+	      <div class="additional-fields">
+	        <p>Encendido: <input type="checkbox" th:field="*{encendido}" name="encendido"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorAlumbrado" value="sensorAlumbrado">
+	      <label class="form-check-label" for="sensorAlumbrado">Sensor de Alumbrado</label>
+	      <div class="additional-fields">
+	        <p>Estación: <input type="text" name="estacion"></p>
+	        <p>Encendido: <input type="checkbox" name="encendido"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	    <div class="form-check">
+	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorEstacionamiento" value="sensorEstacionamiento">
+	      <label class="form-check-label" for="sensorEstacionamiento">Sensor de Estacionamiento</label>
+	      <div class="additional-fields">
+	        <p>Plazas: <input type="number" name="plazas"></p>
+	        <!-- Agrega más inputs según tus necesidades -->
+	      </div>
+	    </div>
+	  </div>
+	
+	  <button type="submit" class="btn btn-primary">Guardar</button>
+	</form>
 	
 
 
