Agregado de plaza y SensorEstacionamiento

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -2,10 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 		<title>UNLa</title>
-		<!-- Bootstrap core CSS -->
-		<link href="/vendor/bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
-		<link href="/css/modern-business.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 	    <!-- Page Content -->
@@ -15,15 +13,12 @@
 	        <form th:action="@{/loginprocess}" method="post">
 		      	<input type="text" name="username" id="username" placeholder="Username" />
 		      	<input type="password" name="password" id="password" placeholder="Password" />
-		      	<input type="submit" />
+		      	<input type="submit"/>
 	      	</form>
 	      	<div th:if="${error != null}" class="alert alert-danger">
 		    	Invalid username or password.
 		    </div>
 	      </div>
 	    </div>
-	    <!-- Bootstrap core JavaScript -->
-	    <script src="/vendor/jquery/jquery.min.js"></script>
-	    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
