--- a/src/main/resources/templates/dispositivo/dispositivos.html
+++ b/src/main/resources/templates/dispositivo/dispositivos.html
@@ -9,65 +9,37 @@
 	<div class="col">
   		<h1>Listado de Sensores</h1>
 	</div>
+	<div>
+		<a th:href="@{/dispositivo/new}" class="btn btn-success"> <i class="fa fa-arrow-circle-o-left"></i>&nbsp;AGREGAR DISPOSITIVO</a>
+	</div>
 	<div class="container col-10" id="myTable">
   		<div class="col-12">
     	<h2> </h2>
   	</div>
 
   	<table class="table table-stripped table-bordered" >
-    	<thead class="table-dark">
+    	<thead class="table-dark" align="center">
       		<tr>
         		<th scope="col">Id</th>
         		<th scope="col">Activo</th>
-        		<th scope="col">Name</th>
-        		<th scope="col">Info</th>
-        		<th scope="col">Update</th>
-        		<th scope="col">Delete</th>
+        		<th scope="col">Nombre</th>
+        		<th scope="col">Información</th>
+        		<th scope="col">Modificar</th>
+        		<th scope="col">Eliminar</th>
       		</tr>
     	</thead>
-    	<tbody>
+    	<tbody align="center">
      	 	<tr th:each="dispositivo: ${dispositivos}">
         		<td th:text="${dispositivo.id}"></td>
         		<td th:text="${dispositivo.activo}"></td>
         		<td th:text="${dispositivo.nombre}"></td>
         		
-        		<td><button type="button" class="btn btn-link">Info</button></td>
+        		<td><button type="button" class="btn btn-secondary">Información</button></td>
         		<td><button type="button" class="btn btn-primary">Editar</button></td>
-        		<td><button type="button" class="btn btn-danger">Delete</button></td>
+        		<td><button type="button" class="btn btn-danger">Eliminar</button></td>
       		</tr>
     	</tbody>
   	</table>
 	</div>
-	
-	
-	<!--
-    <table>
-        <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Activo</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="dispositivo : ${dispositivos}">
-                <td><span th:text="${dispositivo.nombre}" /></td>
-                <td><span th:text="${dispositivo.activo}" /></td>
-            </tr>
-        </tbody>
-    </table>
-   
-    <form action="#" th:action="@{/dispositivo/}" th:object="${dispositivo}" method="post">
-        <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
-        <p>Activo: <input type="text" th:field="*{activo}" /></p>
-        <input type="submit" />
-    </form>
-      
-     <form th:object="${dispositivo}" th:action="@{/submit/}" method="post">
-		 <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
-		 <p>Activo: <input type="text" th:field="*{activo}" /></p>
-		 <p><input type="submit" value="Enviar" /></p>
-	</form>-->
-        
-    
 </body>
 </html>
