Modificamos html genero el propio, los botones los movimos todos del controler a la rama propia de sensor dispositivo , ahora todo funciona correctamente en el front y back

--- a/src/main/resources/templates/dispositivo/alumbrado.html
+++ b/src/main/resources/templates/dispositivo/alumbrado.html
@@ -42,7 +42,7 @@
 							<td th:text="${dispositivo.estacion}"></td>
 							<td th:text="${dispositivo.obscuridadPor}"></td>
 							<td>
-							<form th:action="@{/dispositivo/bajaLogica}" method="post">
+							<form th:action="@{/sensoralumbrado/bajaLogica}" method="post">
 									<input type="hidden" name="id" th:value="${dispositivo.id}" /> 
 									<button type="submit" class="btn eliminar-btn">Eliminar</button>
 								</form>
