cambios en el html y las rutas

--- a/src/main/resources/templates/dispositivo/index.html
+++ b/src/main/resources/templates/dispositivo/index.html
@@ -9,11 +9,10 @@
 	<div class="col">
   		<h1>Listado de Sensores</h1>
   		
-  		<a th:href="@{/new}" class="btn btn-success"> <i class="fa fa-arrow-circle-o-left"></i>&nbsp;AGREGAR DISPOSITIVO</a>
+  		<a th:href="@{sensorhumedad/}" class="btn btn-success"> <i class="fa fa-arrow-circle-o-left"></i>&nbsp;Sensor Humedad</a>
 		
-	
 	</div>
-	<div class="container col-10" id="myTable">
+	<!--<div class="container col-10" id="myTable">
   		<div class="col-12">
     	<h2> </h2>
   	</div>
@@ -42,6 +41,6 @@
     	</tbody>
   	</table>
 	</div>
-    
+    -->
 </body>
 </html>
