Intento de agregado de mediciones

--- a/src/main/resources/templates/dispositivo/dispositivos.html
+++ b/src/main/resources/templates/dispositivo/dispositivos.html
@@ -101,7 +101,7 @@
                 <a th:href="@{/recolectorinteligente/}" class="btn btn-success">DISPOSITIVOS RECOLECTOR</a>
             </div>
             <div class="col-auto">
-                <a th:href="@{/dispositivo/estacionamiento}" class="btn btn-success">Dispositivos Estacionamiento</a>
+                <a th:href="@{/estacionamiento/}" class="btn btn-success">DISPOSITIVOS ESTACIONAMIENTO</a>
             </div>
             <div class="col-auto">
                 <a th:href="@{/dispositivo/humedad}" class="btn btn-success">Dispositivos Humedad</a>
