Agrega boton de logout, + logica que mira cuando un dispositivo esta dado de baja

--- a/src/main/resources/templates/dispositivo/alumbrado.html
+++ b/src/main/resources/templates/dispositivo/alumbrado.html
@@ -13,6 +13,13 @@
     </style>
 </head>
 <body>
+	</div>
+			<div class="col-auto">
+				<form th:action="@{/logout}" method="post">
+					<button type="submit" class="btn btn-danger">Logout</button>
+				</form>
+			</div>
+		</div>
     <div class="container">
         <div class="row">
             <div class="col">
