--- a/src/main/resources/templates/dispositivo/dispositivos.html
+++ b/src/main/resources/templates/dispositivo/dispositivos.html
@@ -6,45 +6,57 @@
 	<title>Dispositivo</title>
 </head>
 <body>
-    <div class="col">
-        <h1>Listado de Dispositivos</h1>
-    </div>
-    <div class="container col-10" id="myTable">
-        <div class="col-12">
-            <h2></h2>
-        </div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col">
+				<h1>Listado de Dispositivos</h1>
+			</div>
+			<div class="col-auto">
+				<form th:action="@{/logout}" method="post">
+					<button type="submit" class="btn btn-danger">Logout</button>
+				</form>
+			</div>
+		</div>
+		<div class="container col-10" id="myTable">
+			<div class="col-12">
+				<h2></h2>
+			</div>
 
-        <div class="row justify-content-between mb-3">
-            <div class="col-auto">
-                <a th:href="@{/sensoralumbrado/alumbrado}" class="btn btn-success">DISPOSITIVOS ALUMBRADO</a>
-            </div>
-            <div class="col-auto">
-                <a th:href="@{/recolectorinteligente/}" class="btn btn-success">DISPOSITIVOS RECOLECTOR</a>
-            </div>
-            <div class="col-auto">
-                <a th:href="@{/dispositivo/estacionamiento}" class="btn btn-success">Dispositivos Estacionamiento</a>
-            </div>
-            <div class="col-auto">
-                <a th:href="@{/dispositivo/humedad}" class="btn btn-success">Dispositivos Humedad</a>
-            </div>
-        </div>
+			<div class="row justify-content-between mb-3">
+				<div class="col-auto">
+					<a th:href="@{/sensoralumbrado/alumbrado}" class="btn btn-success">DISPOSITIVOS ALUMBRADO</a>
+				</div>
+				<div class="col-auto">
+					<a th:href="@{/recolectorinteligente/}" class="btn btn-success">DISPOSITIVOS RECOLECTOR</a>
+				</div>
+				<div class="col-auto">
+					<a th:href="@{/dispositivo/estacionamiento}" class="btn btn-success">Dispositivos Estacionamiento</a>
+				</div>
+				<div class="col-auto">
+					<a th:href="@{/dispositivo/humedad}" class="btn btn-success">Dispositivos Humedad</a>
+				</div>
+			</div>
 
-        <table class="table table-stripped table-bordered">
-            <thead class="table-dark" align="center">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Activo</th>
-                    <th scope="col">Nombre</th>
-                </tr>
-            </thead>
-            <tbody align="center">
-                <tr th:each="dispositivo: ${dispositivos}">
-                    <td th:text="${dispositivo.id}"></td>
-                    <td th:text="${dispositivo.activo}"></td>
-                    <td th:text="${dispositivo.nombre}"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+			<table class="table table-stripped table-bordered">
+				<thead class="table-dark" align="center">
+					<tr>
+						<th scope="col">Id</th>
+						<th scope="col">Activo</th>
+						<th scope="col">Nombre</th>
+					</tr>
+				</thead>
+				<tbody align="center">
+					<tr th:each="dispositivo: ${dispositivos}">
+						<td th:text="${dispositivo.id}"></td>
+						<td th:text="${dispositivo.activo}"></td>
+						<td th:text="${dispositivo.nombre}"></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+	        integrity="sha384-pCavfFfZMqlPbW/rlY5jeL5a5a7SW5SZl5LwPRnCh7sLmD9rbc7LTIEnmtLGNkwv"
+	        crossorigin="anonymous"></script>
 </body>
 </html>
