--- a/src/main/resources/templates/dispositivo/index.html
+++ b/src/main/resources/templates/dispositivo/index.html
@@ -5,6 +5,14 @@
 <title>Dispositivo</title>
 </head>
 <body>
+	</div>
+        <div class="col-auto">
+            <form th:action="@{/logout}" method="post">
+                <button type="submit" class="btn btn-danger">Logout</button>
+            </form>
+        </div>
+    </div>
+        
     <div class="col">
         <h1>Listado de Dispositivos</h1>
     </div>
