--- a/src/main/resources/templates/dispositivo/dispositivos.html
+++ b/src/main/resources/templates/dispositivo/dispositivos.html
@@ -4,77 +4,46 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <title>Dispositivo</title>
 </head>
-<body></body>
-	
-	<h1>Nuevo dispositivo</h1>
-	<br>
-    <table class="table table-stripped table-bordered">
-        <thead class="table-dark" align="center">
-            <tr>
-				<th scope="col">Id</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Activo</th>
-            </tr>
-        </thead>
-        <tbody align="center">
-            <tr th:each="dispositivo : ${dispositivos}">
-				<td><span th:text="${dispositivo.id}"/></td>
-                <td><span th:text="${dispositivo.nombre}"/></td>
-                <td><span th:text="${dispositivo.activo}"/></td>
-            </tr>
-        </tbody>
-    </table>
-    <br>
-    <form action="#" th:action="@{/dispositivo/new}" th:object="${dispositivo}" method="post">
-        <p>Nombre: <input type="text" th:field="*{nombre}" /></p>
-        <br>
-		<p>Activo:
-          <select th:field="*{activo}">
-            <option value="true">Verdadero</option>
-            <option value="false">Falso</option>
-          </select>
-		</p>
-		<br>
-        <p><input type="submit" value="Enviar" /></p>
-    </form>
-	        <!--<p>Encendido: <input type="checkbox" th:field="*{encendido}" name="encendido"></p>-->
-	        <!-- Agrega más inputs según tus necesidades -->
-	      </div>
-	    </div>
-	    <div class="form-check">
-	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorAlumbrado" value="sensorAlumbrado">
-	      <label class="form-check-label" for="sensorAlumbrado">Sensor de Alumbrado</label>
-	      <div class="additional-fields">
-	        <p>Estación: <input type="text" name="estacion"></p>
-	        <p>Encendido:
-          		<select th:field="*{activo}">
-           			<option value="true">Verdadero</option>
-          			<option value="false">Falso</option>
-          		</select>
-		</p>
-	        <!-- Agrega más inputs según tus necesidades -->
-	      </div>
-	    </div>
-	    <div class="form-check">
-	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="sensorEstacionamiento" value="sensorEstacionamiento">
-	      <label class="form-check-label" for="sensorEstacionamiento">Sensor de Estacionamiento</label>
-	      <div class="additional-fields">
-	        <p>Plazas: <input type="number" name="plazas"></p>
-	        <!-- Agrega más inputs según tus necesidades -->
-	      </div>
-	    </div>
-	  </div>
-	  <div class="form-check">
-	      <input class="form-check-input" type="radio" name="tipoDispositivo" id="recolectorInteligente" value="recolectorInteligente">
-	      <label class="form-check-label" for="sensorAlumbrado"><h4>Recolector Inteligente</h4></label>
-	      <div class="additional-fields">
-	        <!--<p>Estación: <input type="text" th:field="*{estacion}"></p>-->
-	        <p>Ubicacion: <input type="text" th:field="*{ubicacion}"></p>
-	        <!-- Agrega más inputs según tus necesidades -->
-	      </div>
-	    </div>
-	
-	  <button type="submit" class="btn btn-primary">Guardar</button>
-	</form>
+<body>
+    <div class="col">
+        <h1>Listado de Dispositivos</h1>
+    </div>
+    <div class="container col-10" id="myTable">
+        <div class="col-12">
+            <h2></h2>
+        </div>
+
+        <div class="row justify-content-between mb-3">
+            <div class="col-auto">
+                <a th:href="@{/sensoralumbrado/alumbrado}" class="btn btn-success">DISPOSITIVOS ALUMBRADO</a>
+            </div>
+            <div class="col-auto">
+                <a th:href="@{/recolectorinteligente/}" class="btn btn-success">DISPOSITIVOS RECOLECTOR</a>
+            </div>
+            <div class="col-auto">
+                <a th:href="@{/dispositivo/estacionamiento}" class="btn btn-success">DISPOSITIVOS ESTACIONAMIENTO</a>
+            </div>
+            <div class="col-auto">
+                <a th:href="@{/dispositivo/humedad}" class="btn btn-success">DISPOSITIVOS HUMEDAD</a>
+            </div>
+        </div>
+
+        <table class="table table-stripped table-bordered">
+            <thead class="table-dark" align="center">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Activo</th>
+                    <th scope="col">Nombre</th>
+                </tr>
+            </thead>
+            <tbody align="center">
+                <tr th:each="dispositivo: ${dispositivos}">
+                    <td th:text="${dispositivo.id}"></td>
+                    <td th:text="${dispositivo.activo}"></td>
+                    <td th:text="${dispositivo.nombre}"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
