No puedo creer que esto siga funcionando

--- a/src/main/resources/templates/dispositivo/dispositivos.html
+++ b/src/main/resources/templates/dispositivo/dispositivos.html
@@ -5,11 +5,11 @@
 <title>Dispositivo</title>
 </head>
 <body>
-	<div class="container-fluid">
+	<!--<div class="container-fluid">
 		<div class="row">
 			<div class="col">
 				<h1>Listado de Dispositivos</h1>
-			</div>
+			</div>-->
 			<div class="col-auto">
 				<form th:action="@{/logout}" method="post">
 					<button type="submit" class="btn btn-danger">Logout</button>
