mejoro logica sensor alumbrado, todo funciona en conjunto brenda/johann/valentina 100% :D (main)

--- a/src/main/resources/templates/dispositivo/recolector.html
+++ b/src/main/resources/templates/dispositivo/recolector.html
@@ -105,6 +105,7 @@
 			<div class="col">
 				<!-- generamos la lista de eventos de cada dispositivo -->
 				<h2>Lista de Eventos de los dispositivos</h2>
+				 <a th:href="@{/evento/}" class="btn btn-success mb-3"> <i class="fa fa-arrow-circle-o-left"></i>&nbsp;Agregar Evento</a>
 			</div>
 		</div>
 		<div class="row">
