--- a/src/main/resources/templates/dispositivo/alumbrado.html
+++ b/src/main/resources/templates/dispositivo/alumbrado.html
@@ -107,6 +107,7 @@
         <div class="row">
             <div class="col">
                 <h2>Lista de Eventos de los dispositivos</h2>
+                <a th:href="@{/evento/}" class="btn btn-success mb-3"> <i class="fa fa-arrow-circle-o-left"></i>&nbsp;Agregar Evento</a>
                 <table class="table table-stripped table-bordered">
                     <thead class="table-dark">
                         <tr>
