--- a/src/main/resources/templates/dispositivo/index.html
+++ b/src/main/resources/templates/dispositivo/index.html
@@ -30,10 +30,10 @@
 					<a th:href="@{/recolectorinteligente/}" class="btn btn-success">DISPOSITIVOS RECOLECTOR</a>
 				</div>
 				<div class="col-auto">
-					<a th:href="@{/dispositivo/estacionamiento}" class="btn btn-success">Dispositivos Estacionamiento</a>
+					<a th:href="@{/dispositivo/estacionamiento}" class="btn btn-success">DISPOSITIVOS ESTACIONAMIENTO</a>
 				</div>
 				<div class="col-auto">
-					<a th:href="@{/sensorhumedad/}" class="btn btn-success">Dispositivos Humedad</a>
+					<a th:href="@{/sensorhumedad/}" class="btn btn-success">DISPOSITIVOS HUMEDAD</a>
 				</div>
 			</div>
 
