--- a/src/main/resources/templates/evento/evento.html
+++ b/src/main/resources/templates/evento/evento.html
@@ -137,7 +137,7 @@
 					</form>
 					<form th:action="@{/sensorhumedad/agregarevento}" method="post">
 						<div class="form-group">
-							<label for="dispositivoId">ID del Dispositivo:</label>
+							<label for="dispositivoId">ID del Dispositivo Estacionamiento:</label>
 							<input type="number" class="form-control" id="dispositivoId" name="dispositivoId" required>
 						</div>
 						<div class="form-group">
