--- a/src/main/resources/templates/estacionamiento/estacionamiento.html
+++ b/src/main/resources/templates/estacionamiento/estacionamiento.html
@@ -60,11 +60,13 @@
                     <th scope="col">Fecha</th>
                     <th scope="col">Dispositivo Vinculado</th>
                     <th scope="col">Estado libre</th>
+                    
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="estacionamiento: ${estacionamientos}">
-                    <td>
+                    
+                     <td>
                         <li th:each="medicion : ${estacionamiento.mediciones}" th:utext="${medicion.idMedicion}"></li>
                     </td>
                     <td>
@@ -74,8 +76,10 @@
                         <li th:each="medicion : ${estacionamiento.mediciones}" th:utext="${medicion.dispositivo.id}"></li>
                     </td>
                     <td>
-                        <li th:each="medicion : ${estacionamiento.mediciones}" th:utext="${medicion.estadoLibre}"></li>
+						<li th:each="medicion : ${estacionamiento.mediciones}" th:utext="${medicion.dispositivo.id}"></li>
+                      <!--<p>Estado libre: <span th:text="${medicion.dispositivo.estadoLibre}"></span></p>-->
                     </td>
+                    
                 </tr>
             </tbody>
         </table>
@@ -120,7 +124,13 @@
                         </tr>
                     </tbody>
                 </table>
-                <br><br>
+                <br>
+               <div align="center">
+				    <a th:href="@{estacionamiento/agregarevento}" class="btn btn-primary">
+                <i class="fa fa-arrow-circle-o-left"></i>&nbsp;Agregar Evento
+            </a>
+			   </div>
+                <br>
         
 </body>
 </html>
