Integración del código de todo el grupo

--- a/src/main/resources/templates/estacionamiento/estacionamiento.html
+++ b/src/main/resources/templates/estacionamiento/estacionamiento.html
@@ -90,7 +90,7 @@
                         <li th:each="medicion : ${estacionamiento.mediciones}" th:utext="${medicion.dispositivo.id}"></li>
                     </td>
                      <td>
-					<!--<li th:each=" medicion : ${estacionamiento.mediciones}" th:utext="${medicion.estadoLibre}"></li>-->
+					<li th:each=" medicion : ${estacionamiento.mediciones}" th:utext="${medicion.estadoLibre}"></li>
                      
                     </td>
                     
