otra vez cambios

--- a/src/main/resources/templates/dispositivo/alumbrado.html
+++ b/src/main/resources/templates/dispositivo/alumbrado.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="row">
 	    <div class="col text-start">
-	        <form th:action="@{/dispositivo/}" method="post">
+	        <form th:action="@{/dispositivo/}" >
 	            <button type="submit" class="btn btn-danger">VOLVER</button>
 	        </form>
 	    </div>
