Cambios finales con todo el equipo

--- a/src/main/resources/templates/dispositivo/alumbrado.html
+++ b/src/main/resources/templates/dispositivo/alumbrado.html
@@ -15,8 +15,8 @@
 <body>
 	<div class="row">
 	    <div class="col text-start">
-	        <form th:action="@{/dispositivo/}" method="post">
-	            <button type="submit" class="btn btn-danger">VOLVER</button>
+	        <form th:action="@{/dispositivo/}">
+	            <button class="btn btn-danger">VOLVER</button>
 	        </form>
 	    </div>
 	    <div class="col text-end">
@@ -41,7 +41,7 @@
                             <th scope="col">Nombre</th>
                             <th scope="col">Encendido</th>
                             <th scope="col">Estación</th>
-                            <th scope="col">Obscuridad</th>
+                            <th scope="col">Obscuridad inicial</th>
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
