--- a/src/main/resources/templates/evento/evento.html
+++ b/src/main/resources/templates/evento/evento.html
@@ -9,7 +9,7 @@
 	
 	<div class="row">
 	    <div class="col text-start">
-	        <form th:action="@{/dispositivo/}" method="post">
+	        <form th:action="@{/dispositivo/}">
 	            <button type="submit" class="btn btn-danger">VOLVER</button>
 	        </form>
 	    </div>
