Ultimacion de detalles

--- a/src/main/resources/templates/dispositivo/recolector.html
+++ b/src/main/resources/templates/dispositivo/recolector.html
@@ -165,7 +165,7 @@
 						<input type="text" class="form-control" id="nombre" name="nombre" required>
 					</div>
 					<div class="form-group">
-						<label for="activo">Activo:</label>
+						<label for="activo">Lleno:</label>
 						<select class="form-control" id="activo" name="activo" required>
 							<option value="true">true</option>
 							<option value="false">false</option>
